Fix profile widget on smaller screens

--- a/src/components/ProfileWidget/ProfileWidget.module.scss
+++ b/src/components/ProfileWidget/ProfileWidget.module.scss
@@ -90,6 +90,11 @@
     width: 48px;
     grid-template-columns: 48px;
     grid-column-gap: 0px;
+
+    .background {
+      width: 46px;
+      height: 46px;
+    }
   }
 
   .userInfo {
